--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tuesdaybloom.github.io/textTailor",
+  "homepage": "https://tuesdaybloom.github.io/TextTailor",
   "name": "texttailor",
   "version": "0.1.0",
   "private": true,
